<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:id="@+id/coordinatorLayout_register"
    tools:context=".CreateAccountActivity">

    <EditText
        android:id="@+id/et_first_name"
        style="@style/viewCustom"
        android:ems="10"
        android:fontFamily="@font/orbitron"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/viewCustom"
        android:layout_below="@id/et_first_name"
        android:ems="10"
        android:fontFamily="@font/orbitron"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_below="@id/et_last_name"
        android:ems="10"
        android:fontFamily="@font/orbitron"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:fontFamily="@font/orbitron"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_register"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/orbitron"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>