<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Coinz</string>
    <string name="access_token">pk.eyJ1IjoiczE2MDM0NTkiLCJhIjoiY2pucml1cjQzMDgyZzN2bGxhZjl4aHV2eSJ9.OZvYlGNGkHUEW_xUX9BNNA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="send_email_to_reset_password">Send email to reset password</string>
    <string name="transfer">Transfer</string>
    <string name="bank">Bank</string>
    <string name="peny">PENY:</string>
    <string name="quid">QUID:</string>
    <string name="dolr">DOLR:</string>
    <string name="shil">SHIL:</string>
    <string name="todays_rates_are">Today\'s rates are:</string>
    <string name="welcome_to_coinz_bank">Welcome to Coinz Bank</string>
    <string name="today_s_rates_are">Today\'s Rates Are:</string>
    <string name="shil_CAPS">SHIL</string>
    <string name="dolr_CAPS">DOLR</string>
    <string name="quid_CAPS">QUID</string>
    <string name="peny_CAPS">PENY</string>
    <string name="back_to_map">Back to Map</string>
    <string name="start">Start</string>
    <string name="welcome_to_coinz">Welcome to Coinz!</string>
    <string name="press_start_to_play">Press start to play</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back_name">Welcome back, [name]!</string>
    <string name="email_SBR">[email]</string>
    <string name="gold">GOLD:</string>
    <string name="coinz">Coinz</string>
    <string name="sign_out">Sign Out</string>
    <string name="coin_desc">Pixelated gold coin</string>
</resources>