<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:backgroundTint="@color/gray"
    android:orientation="vertical"
    android:weightSum="3">
...
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/orbitron"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
...
